Fix z-index of services section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -923,7 +923,6 @@ section {
 	-webkit-user-select: none;
 	user-select: none;
 	padding: 20px;
-	z-index: 999;
 	cursor: default;
 	color: #fff;
 }
